Techlmaginia Software fixes

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-  <title>Open Template Hub</title>
+  <title>Techlmaginia Softwares</title>
   <base href="/">
 
   <meta content="yes" name="apple-mobile-web-app-capable">
@@ -139,7 +139,7 @@
   <div class="index-splash-page">
     <div class="index-splash-hero">
       <img alt="logo" src="./assets/logo/brand-logo.png">
-      <h2>Open Template Hub</h2>
+      <h2>Techlmaginia Softwares</h2>
       <div class="index-splash-bar">
       </div>
     </div>
